--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon -e js app.js"
+		"dev": "nodemon -e js app.js",
+		"start":"node app.js"
 	},
 	"author": "Ashish <ashishskkumar321@gmail.com>",
 	"license": "ISC",
