--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon -e js app.js",
-		"start":"node app.js"
+		"start": "node app.js"
 	},
 	"author": "Ashish <ashishskkumar321@gmail.com>",
 	"license": "ISC",
@@ -14,6 +14,7 @@
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.1",
 		"cookie-session": "^1.4.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.10.3",
